[tool.poetry]
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "PowerShell Python Citrix Tricks."
include = [
  "resources/powershell/*.ps1",
]
license = "GPL-3.0-or-later"
name = "psytricks"
readme = "README.md"
version = "0.0.0"

[tool.poetry.urls]
# "Changelog" = "https://github.com/imcf/psytricks/blob/main/CHANGELOG.md"
"Organisation Homepage" = "https://imcf.one/"
"Twitter" = "https://twitter.com/imcf_basel"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"

[tool.poetry-dynamic-versioning]
enable = true
# pattern = "^psytricks-((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
style = "semver"
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
folders = [
  {path = "src"},
]

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
