[project]
name = "psytricks"
description = "PowerShell Python Citrix Tricks."
authors = [
    { name = "Niko Ehrenfeuchter", email = "nikolaus.ehrenfeuchter@unibas.ch" },
]
license = "GPL-3.0-or-later"
readme = "README.md"
dynamic = ["version"]

[tool.poetry]
documentation = "https://imcf.one/apidocs/psytricks/psytricks.html"
version = "0.0.0"

[tool.poetry.urls]
"Changelog" = "https://github.com/imcf/psytricks/blob/main/CHANGELOG.md"
"Organisation Homepage" = "https://imcf.one/"

[tool.poetry.dependencies]
click = "^8.1.3"
loguru = "^0.7.0"
python = "^3.9"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipython = "^8.13.2"
pylint = "^2.16.2"

[tool.poetry.scripts]
psytricks = "psytricks.cli:run_cli"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
folders = [
  {path = "src"},
  {path = "src/psytricks/__ps1__", files = ["*.ps1"], patterns = ['(^\$Version = ["])[^"]*(["])']},
]

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]

[tool.ruff.lint]
# exclude = [
#   "tests/foo/*"
# ]

select = [
    "D",
    "D203",  # blank line required before class docstring
    "D212",  # summary lines must be on the first physical line of the docstring
    "D401",  # imperative mood for all docstrings
    "D415",  # summary line has to end in a punctuation mark
    "D417",  # require documentation for _all_ function parameters
]

ignore = [
    "D202",  # no blank lines allowed after function docstring
    ## D211 conflicts with ruff's formatting as of 2025-04-14, so don't use it:
    # "D211",  # no blank lines allowed before class docstring
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"